
- not all Comments reply to preference ``keepComments``, some will probably survive if set to ``False``


0.9.6dev
--------
HEAD
    - API CHANGE (minor): ``CSSValue.getFloattype(unitType=None)``, parameter is now optional in which case the current dimension is used.

    + **FEATURE**: Started implementation of CSS profiles...

        - unknown properties raise a WARNING instead of INFO now

    + FEATURE: Script ``cssparse`` has new option ``-u URL`` which parses the given URL.

    + FEATURE: Value with a zero value are now serialized just as ``0`` without any in this case unneeded dimension. Might not work for all cases but the most common ones.

    - BUGFIX: Parsing of a CSSValue like ``red /**/`` (value, Space, comment) fixed.
    - BUGFIX: Parsing values with ``+`` operator fixed.


0.9.5
-----
0.9.5.1 080811
    + **BUGFIX**: Fixed parsing of ``}a,b`` which resulted in TypeError until now.

    + **BUGFIX**: A rule with a selector using an undefined and therefor invalid namespace prefix is ignored now.

    + **BUGFIX**: Removed typo in MediaList which resulted in Exception when parsing medialist containing ``all`` and another media.

    + **BUGFIX**: Reading imported styles may have failed under certain conditions with an AttributeError.

    + FEATURE: Added ``cssutils.VERSION`` which is the current release version, in this case e.g. ``"0.9.5.1"``

    + IMPROVEMENT: Optimized imports and partly removed circular ones which are a bit tricky...

0.9.5 080730
    + **API CHANGE**: If a new medium is trying to be appended to a ``MediaList`` already set to ``all`` an ``xml.dom.InvalidModificationErr`` is raised. The exception to this handling is adding ``handheld`` which is a special case for Opera and kept for now. This special handling may be removed in the future. A ``WARNING`` is logged in any case.

    - **BUGFIX**: Fixed reference error in @import rule preventing change of the used ``MediaList``.