@@ -47,10 +47,11 @@ HEAD
 
     + **FEATURE**: Started implementation of CSS profiles...
 
+        - added CSS Color Module Level 3 with properties ``color`` and ``opacity``. Not implemented are SVG color names.
         - unknown properties raise a WARNING instead of INFO now
 
-    + FEATURE: Script ``cssparse`` has new option ``-u URL`` which parses the given URL.
 
+    + FEATURE: Script ``cssparse`` has new option ``-u URL`` which parses the given URL.
     + FEATURE: Value with a zero value are now serialized just as ``0`` without any in this case unneeded dimension. Might not work for all cases but the most common ones.
 
     - BUGFIX: Parsing of a CSSValue like ``red /**/`` (value, Space, comment) fixed.
